--- a/Commander/FAQS.html
+++ b/Commander/FAQS.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="FAQS.css" />
         <!-- font-awesome -->
-        <!-- <link
+        <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-        /> -->
+        />
     </head>
 
     <!-- NAV BAR -->
@@ -54,7 +54,7 @@
                 </li>
             </ul>
             <!-- END OF LINKS -->
-            <button class="nav-toggle"><i class="fas fa-bars"></i></button>
+            <!-- <button class="nav-toggle"><i class="fas fa-bars"></i></button> -->
         </div>
     </nav>
     <!-- END OF NAV BAR -->
@@ -71,7 +71,7 @@
                     </button>
                 </div>
                 <div class="answers">
-                    <p>
+                    <p class="text">
                         Ideally you should have 30-36 lands in your 100
                         card-deck. Then consider your draw engine if any.
                         Although there are no strict formats, it is good to take
@@ -92,7 +92,7 @@
                     </button>
                 </div>
                 <div class="answers">
-                    <p>
+                    <p class="text">
                         For new players, it is recommended to construct a
                         mono-colored deck or a two-color deck.
                     </p>
@@ -110,7 +110,7 @@
                     </button>
                 </div>
                 <div class="answers">
-                    <p>
+                    <p class="text">
                         It is important to just have fun and of course,
                         budgeting. Do not spend too much on single cards. Aim
                         for consistency.
