--- a/Commander/lifecounter.html
+++ b/Commander/lifecounter.html
@@ -54,7 +54,7 @@
                 </li>
             </ul>
             <!-- END OF LINKS -->
-            <button class="nav-toggle"><i class="fas fa-bars"></i></button>
+            <!-- <button class="nav-toggle"><i class="fas fa-bars"></i></button> -->
         </div>
     </nav>
     <!-- END OF NAV BAR -->
