--- a/Commander/Home.html
+++ b/Commander/Home.html
@@ -21,7 +21,7 @@
             </div>
             <!-- LINKS -->
             <ul class="links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="Home.html">Home</a></li>
                 <li><a href="lifecounter.html">Life Counter</a></li>
                 <li><a href="FAQS.html">FAQs</a></li>
                 <li><a href="index.html">Contact Us</a></li>
