--- a/Commander/FAQS.html
+++ b/Commander/FAQS.html
@@ -23,7 +23,7 @@
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="lifecounter.html">Life Counter</a></li>
                 <li><a href="FAQS.html">FAQs</a></li>
-                <li><a href="index.html">Contact Us</a></li>
+                <li><a href="ContactUs.html">Contact Us</a></li>
             </ul>
             <!-- social media -->
             <ul class="social-icons">
