updated css and added note

--- a/Commander/ContactUs.html
+++ b/Commander/ContactUs.html
@@ -86,6 +86,9 @@
                 <button>submit</button>
             </div>
         </section>
+        <p class="note">
+            (Not a real website. Practicing HTML, CSS, & Javascript)
+        </p>
         <script src="ContactUs.js"></script>
     </body>
 </html>
