--- a/Commander/FAQS.html
+++ b/Commander/FAQS.html
@@ -120,6 +120,7 @@
             <!-- END OF THIRD QUESTION -->
         </section>
 
+        <p>(Not a real website. Practicing HTML, CSS, & Javascript)</p>
         <script src="FAQS.js"></script>
     </body>
 </html>
