--- a/Commander/Home.html
+++ b/Commander/Home.html
@@ -85,6 +85,7 @@
                 <button class="random-btn">random</button>
             </div>
         </article>
+        <p>(Not a real website. Practicing HTML, CSS, & Javascript)</p>
         <script src="Home.js"></script>
     </body>
 </html>
