--- a/Commander/lifecounter.html
+++ b/Commander/lifecounter.html
@@ -92,7 +92,7 @@
                 </div>
             </section>
         </div>
-
+        <p>(Not a real website. Practicing HTML, CSS, & Javascript)</p>
         <script src="lifecounter.js"></script>
     </body>
 </html>
