changed bg color

--- a/Commander/ContactUs.html
+++ b/Commander/ContactUs.html
@@ -71,7 +71,12 @@
             </div>
             <div class="name">
                 <p>General topic or concern</p>
-                <input type="text" placeholder="Type here" class="input-bar" />
+                <input
+                    required
+                    type="text"
+                    placeholder="Type here"
+                    class="input-bar"
+                />
             </div>
             <div class="name">
                 <p>Message</p>
